force-app/main/default/objects/API_Settings__c/API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>API Settings</label>
</CustomObject>