force-app/main/default/objects/API_Settings__c/fields/api_credit_memo__c.field-meta.xml
<CustomField>
    <fullName>api_credit_memo__c</fullName>
    <label>api_credit_memo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>