force-app/main/default/objects/API_Settings__c/fields/api_customer_deposit__c.field-meta.xml
<CustomField>
    <fullName>api_customer_deposit__c</fullName>
    <label>api_customer_deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>