force-app/main/default/objects/API_Settings__c/fields/api_login__c.field-meta.xml
<CustomField>
    <fullName>api_login__c</fullName>
    <label>api_login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>