force-app/main/default/objects/API_Settings__c/fields/api_multi_customer_deposit__c.field-meta.xml
<CustomField>
    <fullName>api_multi_customer_deposit__c</fullName>
    <label>api multi customer deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>