force-app/main/default/objects/API_Settings__c/fields/api_multi_writecheck__c.field-meta.xml
<CustomField>
    <fullName>api_multi_writecheck__c</fullName>
    <label>api multi writecheck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>