force-app/main/default/objects/API_Settings__c/fields/api_sales_order__c.field-meta.xml
<CustomField>
    <fullName>api_sales_order__c</fullName>
    <label>api sales order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>