force-app/main/default/objects/API_Settings__c/fields/api_writecheck_prepayment_vendor__c.field-meta.xml
<CustomField>
    <fullName>api_writecheck_prepayment_vendor__c</fullName>
    <label>api writecheck prepayment vendor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>