force-app/main/default/objects/API_Settings__c/fields/Bounced_Date__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bounced Date</label>
    <type>Checkbox</type>
</CustomField>