force-app/main/default/objects/API_Settings__c/fields/From_Date_Migration__c.field-meta.xml
<CustomField>
    <fullName>From_Date_Migration__c</fullName>
    <label>From Date Migration</label>
    <type>Date</type>
</CustomField>