force-app/main/default/objects/API_Settings__c/fields/migration_lead_mobcec__c.field-meta.xml
<CustomField>
    <fullName>migration_lead_mobcec__c</fullName>
    <label>migration lead mobcec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>