force-app/main/default/objects/API_Settings__c/fields/To_Date_Migration__c.field-meta.xml
<CustomField>
    <fullName>To_Date_Migration__c</fullName>
    <label>To Date Migration</label>
    <type>Date</type>
</CustomField>